fixed schedule double scroll + weekday render + title (#2955)
* fixed schedule double scroll + weekday render + title

* minor fixes formatting

* comment added

* added body/root comment to use body hook

--- a/src/components/attendee/ScheduleOverlay/ScheduleOverlay.module.scss
+++ b/src/components/attendee/ScheduleOverlay/ScheduleOverlay.module.scss
@@ -10,8 +10,7 @@
   display: flex;
   flex-direction: column;
   max-width: layout.$w-overlay--med;
-  min-height: 100vh;
-  margin: space.empty(10) auto 0 space.empty(5);
+  margin: space.empty(5) auto 0 space.empty(5);
   padding: space.empty(4) space.empty(3);
 
   @media (max-width: breakpoint.$xl) {
